--- a/newsbetter/templates/newsbetter/base.html
+++ b/newsbetter/templates/newsbetter/base.html
@@ -21,6 +21,10 @@
 
     <!-- Dashboard Template CSS -->
     <link href="{% sass_src 'css/dashboard.scss' %}" rel="stylesheet">
+
+    <!-- DataTables CSS -->
+    <link href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"
+          rel="stylesheet">
   </head>
 
   <body>
@@ -68,6 +72,23 @@
       integrity="sha384-eAVkiER0fL/ySiqS7dXu8TLpoR8d9KRzIYtG0Tz7pi24qgQIIupp0fn2XA1H90fP"
       crossorigin="anonymous">
     </script>
-  </body>
 
+    <!-- DataTables JavaScript -->
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js">
+    </script>
+    <script src="{% static 'js/data_tables/ColReorderWithResize.js' %}">
+    </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js">
+    </script>
+    <script src="//cdn.datatables.net/plug-ins/1.10.19/sorting/datetime-moment.js">
+    </script>
+
+    <!-- Flitrex JavaScript -->
+    <script src="{% static 'js/filtrex.js' %}">
+    </script>
+
+    <!-- Custom JavaScript -->
+    <script src="{% static 'js/custom.js' %}">
+    </script>
+  </body>
 </html>
